Fix the website on IE < 11
Also, add alt text for images to please validator.
Thanks to Tey for huge help.

--- a/speedcrunch.css
+++ b/speedcrunch.css
@@ -15,6 +15,7 @@ body {
     margin-left: -225px;
     margin-top: -232px;
     position: fixed;
+    background: #988592;
     background: radial-gradient(circle at 50% 50%, white, #300a24);
     border-radius: 60px;
     box-shadow: 0px 0px 15px 1px black;
